# shipping-c-ci-tests

./: CMakeLists.txt  README.md  fuzz_primes.c  main.c  primes.c  primes.h
.github/workflows/: ci.yml
portable/: CMakeLists.txt  main.c  portable_setup.c  portable_setup.h
